applicationset-apps/gateway/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
spec:
  parentRefs:
    - name: general-gateway
      namespace: gateway
  hostnames:
    - "argocd.192.168.124.1.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd 
          port: 80
